--- a/CSS/style_index.css
+++ b/CSS/style_index.css
@@ -10,23 +10,15 @@ body{
 }
 
 header{
-	background-image: url(../images/fresque.jpg)no-repeat fixed;
-
-
-	
-		background-size:100% 110%;
-		height: 799px;
-		object-position: top ;
-		
+	background-image: url(../images/fresque.jpg);
+	background-size: cover;
+	height: 16%;
+	width: 100%;
+	display: flex;	
 }
 
-.img-death-note {
-	width: 19%;
-	height: auto;
-}
-
-.img-logo-death-note{
-	width: 80%;
+.logo-pacman{
+	width: 20%;
 	height: auto;
 }
 
@@ -37,6 +29,10 @@ header{
 	flex-direction: row;
 	width: 30%;
 	margin: 5px;
+}
+
+.txt-titre{
+	color: white;
 }
 
 /* BOUTON */
@@ -247,3 +243,9 @@ header{
 /* Fin paragraphe du résumer */
 
 /* FIN MAIN */
+
+footer{
+	width: 100%;
+	height: 30%;
+	background-color: blue;
+}
