--- a/CSS/style_index.css
+++ b/CSS/style_index.css
@@ -10,6 +10,8 @@ body{
 }
 
 header{
+	background-image: url(../images/fresque.jpg);
+	background-size: cover;
 	height: 10%;
 	width: 100%;
 	display: flex;	
