--- a/CSS/style_index.css
+++ b/CSS/style_index.css
@@ -10,9 +10,10 @@ body{
 }
 
 header{
-	height: 10%;
+	height: 8%;
 	width: 100%;
-	display: flex;	
+	display: flex;
+	justify-content: space-between;	
 }
 
 .logo-pacman{
@@ -205,8 +206,7 @@ header{
 	width: auto;
 }
 
-.img-resume
-{
+.img-resume{
 	width:30%;
 	margin-right: 2% ;
 	margin-left: 2%;
@@ -214,8 +214,7 @@ header{
 
 /*Paragraphe du résumer */
 
-.align-g
-{
+.align-g{
     margin-top: 2%;
     display: flex ;
     align-items: center ;
@@ -223,8 +222,7 @@ header{
     border-bottom: solid 1px;
 }
 
-.align-d
-{
+.align-d{
     margin-top: 2%;
     display: flex;
     flex-direction: row-reverse;
@@ -232,8 +230,7 @@ header{
    	padding-bottom: 2%;
     border-bottom: solid 1px;
 }
-.p-resume
-{
+.p-resume{
     padding-right: 5%;
     padding-left: 5%;
 }
@@ -242,13 +239,19 @@ header{
 
 /* FIN MAIN */
 
-footer {
-	padding:20px 0 10px 0;
+footer{
+	padding: 20px 0 10px 0;
 	background-color : gray; 
 	color: #FFFAE1;
 	text-align : center;
 }
-.txt-log
-{
-	text-decoration: none ;
+.txt-log{
+	text-decoration: none;
+}
+.connection{
+	display: flex;
+	justify-content: space-around;
+	width: 16%;
+	background-color: red;
+	align-items: center;
 }
