--- a/CSS/style_index.css
+++ b/CSS/style_index.css
@@ -42,13 +42,25 @@ header{
 	display: flex;
 	justify-content: space-around;
 	width: 16%;
-	background-color: blue;
 	align-items: center;
 }
 
 .bouton-R{
+	color: rgb(231, 76, 60);
+	border-radius: 10px;
+	border: none;
+	width: 80px;
+	border: 2px solid rgb(231, 76, 60);
+	box-shadow: 0 3px 6px 0 rgba(0,0,0,0.2), 0 2px 8px 0 rgba(0,0,0,0.19);
+}
+
+.bouton-L{
 	background-color: rgb(231, 76, 60);
-	border-radius: 2px;
+	border-radius: 10px;
+	border: none;
+	width: 80px;
+	border: 2px solid rgb(231, 76, 60);
+	box-shadow: 0 3px 6px 0 rgba(0,0,0,0.2), 0 2px 8px 0 rgba(0,0,0,0.19);
 }
 
 footer{
