--- a/CSS/style_register.css
+++ b/CSS/style_register.css
@@ -48,8 +48,8 @@ main{
 }
 
 .register{
-	background-color: red;
-	width: 40%;
+	background-color: blue;
+	width: 10%;
 	height: 80%;
 	display: flex;
 	flex-direction: column;
@@ -60,6 +60,7 @@ main{
 .form_birthday{
 	display: flex;
 	flex-direction: column;
+	align-items: center;
 }
 
 footer{
