--- a/CSS/style_register.css
+++ b/CSS/style_register.css
@@ -49,7 +49,7 @@ main{
 
 .register{
 	background-color: blue;
-	width: 10%;
+	width: 30%;
 	height: 80%;
 	display: flex;
 	flex-direction: column;
@@ -61,6 +61,11 @@ main{
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+}
+
+input{
+	border: none;
+	border-bottom: 2px solid;
 }
 
 footer{
