--- a/CSS/style_register.css
+++ b/CSS/style_register.css
@@ -47,8 +47,12 @@ main{
 	align-items: center;
 }
 
+.titre_register{
+	color: blue;
+}
+
 .register{
-	background-color: blue;
+	background-color: white;
 	width: 30%;
 	height: 80%;
 	display: flex;
@@ -63,9 +67,26 @@ main{
 	align-items: center;
 }
 
-input{
+.form{
+	width: 100%;
+}
+
+input[type=text], input[type=email], input[type=password], input[type=date], input[type=submit]{
 	border: none;
-	border-bottom: 2px solid;
+	border-bottom: 2px solid blue;
+	background-color: white;
+	width: 80%;
+}
+
+input.placeholder{
+	display: flex;
+	justify-content: center;
+}
+
+.form_submit{
+	margin-top: 20px;
+	display: flex;
+	justify-content: center;
 }
 
 footer{
