--- a/CSS/style_register.css
+++ b/CSS/style_register.css
@@ -60,7 +60,20 @@ main{
 	flex-direction: column;
 	justify-content: space-between;
 	align-items: center;
+	border-radius: 4px;
+	box-shadow: 0 10px 10px;
+}
 
+.login{
+	background-color: white;
+	width: 30%;
+	height: 50%;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	align-items: center;
+	border-radius: 4px;
+	box-shadow: 0 10px 10px;
 }
 
 .form_birthday{
