--- a/CSS/style_post.css
+++ b/CSS/style_post.css
@@ -1,4 +1,22 @@
 .contenu_input{
 	width: 60%;
-	height: 200px;
+	height: 50%%;
+}
+.titre_input{
+	width: 30%
+}
+.container{
+display: flex;
+flex-direction: column;
+text-align: center;
+align-items: center;
+height: 100%;
+width:100%;
+}
+.formulaire{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	height: 100%
+	width:100%;
 }
