--- a/CSS/style_register.css
+++ b/CSS/style_register.css
@@ -37,8 +37,11 @@ header{
 }
 
 main{
+	background-image: url(../images/fresque.jpg);
+	background-size: cover;
 	width: 100%;
 	height: 80%;
+	opacity: 0.5;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -109,10 +112,6 @@ input[type=date]{
 	border-bottom: 2px solid rgb(93, 173, 226);
 	background-color: white;
 	width: 100%;
-}
-
-::placeholder{
-	text-align: center;
 }
 
 .form_submit{
