--- a/CSS/style_register.css
+++ b/CSS/style_register.css
@@ -37,7 +37,7 @@ header{
 }
 
 main{
-	background-image: url(../images/fresque.jpg);
+	background-image: url(../images/fresque.png);
 	background-size: cover;
 	width: 100%;
 	height: 80%;
