--- a/CSS/style_register.css
+++ b/CSS/style_register.css
@@ -37,11 +37,10 @@ header{
 }
 
 main{
-	background-image: url(../images/fresque.jpg);
+	background-image: url(../images/fresque.png);
 	background-size: cover;
 	width: 100%;
 	height: 80%;
-	opacity: 0.5;
 	display: flex;
 	justify-content: center;
 	align-items: center;
