--- a/CSS/style_action_register.css
+++ b/CSS/style_action_register.css
@@ -16,6 +16,8 @@ header{
 	justify-content: space-between;
 	text-align: center;
 	border-bottom: 2px solid rgb(231, 76, 60);	
+	position: fixed;
+	background-color: white;
 }
 
 .logo{
@@ -45,6 +47,7 @@ main{
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	padding-top: 10%;
 }
 
 .titre_register{
@@ -86,7 +89,14 @@ input.placeholder{
 
 footer{
 	padding: 20px 0 10px 0;
-	background-color : gray; 
+	background-color : rgb(159, 190, 231); 
 	color: #FFFAE1;
 	text-align : center;
+}
+#trait1{
+	height: 55%;
+	width: 2px;
+	margin: -3px auto;
+	background-color: rgb(0, 0, 0);
+	box-shadow: 2px 3px 4px rgb(255, 255, 255) ;
 }
