--- a/CSS/style.css
+++ b/CSS/style.css
@@ -19,16 +19,16 @@ header{
 }
 
 .logo{
-	width: 20%;
+	width: 95%;
 	height: auto;
 }
 
 .titre{
-	margin-right: 50px;
+	background-color: red;
 	display: flex;
 	align-items: center;
 	flex-direction: row;
-	width: 30%;
+	width: 13%;
 	margin: 5px;
 }
 
@@ -36,13 +36,40 @@ header{
 	color: rgb(93, 173, 226);
 }
 
+.lien-titre{
+	text-decoration: none;
+}
+
 .connection{
-	background-color: red;
-	width: 20%;
+	width: 15%;
 	height: 100%;
 	display: flex;
+	justify-content: space-around;
+	align-items: center;
+}
+
+.bouton-register, .bouton-login{
+	background-color: red;
+	width: 50%;
+	height: 100%;
+	display: flex;
+	align-items: center;
 	justify-content: center;
-	align-content: center;
+}
+
+.bouton-R{
+	width: 90%;
+	height: 50%;
+	border: 2px solid rgb(93, 173, 226);
+	border-radius: 5px;
+}
+
+.bouton-L{
+	background-color: rgb(93, 173, 226);
+	width: 90%;
+	height: 50%;
+	border: 2px solid rgb(93, 173, 226);
+	border-radius: 5px;
 }
 
 main{
