--- a/CSS/style.css
+++ b/CSS/style.css
@@ -154,6 +154,11 @@ input[type=date]{
 	display: flex;
 	justify-content: center;
 }
+.lien_form_login{
+	text-decoration: none underline;
+	color: black;
+}
+/* ****************************FOOTER**************************************** */
 
 footer{
 	padding: 20px 0 10px 0;
@@ -161,9 +166,78 @@ footer{
 	color: #FFFAE1;
 	text-align : center;
 }
-
-.lien_form_login{
-	text-decoration: none underline;
-	color: black;
+footer form{
+	margin:0 auto;
+	max-width: 900px;
 }
-
+footer input, textarea, button{
+	border: none;
+	width: 55%;
+	padding: 12px 10px;
+	margin: 2px 0;
+	font-size: 1.2em;
+	font-family: 'Advent pro', sans-serif;
+	border-radius: 8px;
+}
+footer textarea{
+	height: 120px;
+}
+footer button{
+	font-size: 1.5em;
+	background-color: #FFFAE1;
+}
+footer button:hover{
+	background-color: #e55039;
+	color: #FFFAE1;
+	cursor: pointer;
+	transition: 0.3s ease-in-out;
+}
+#trait2{
+	height: 1px;
+	width: 75%;
+	background-color: #FFFAE1;
+	margin: 60px auto;
+}
+#copyrighteticons{
+	display: flex;
+	margin-bottom: 20px;
+	padding: 0 10%;
+}
+#copyright{
+	width: 50%;
+	text-align: left;
+	color: #FFFAE1;
+}
+#icons{
+	width: 50%;
+	text-align: right;
+}
+#icons a{
+	display: inline-block;
+	padding: 0 15px;
+	font-size: 1.3em;
+	color: #FFFAE1;
+}
+#icons a:hover{
+	transform: scale(1.5);
+	transition: 0.1;
+}
+#lien {
+	display: flex;
+	margin: 60px auto;
+}
+#bouton{
+	width: 33%;
+	box-shadow:inset 5px 0px 1px -1px #fffae1;	
+}
+#bouton1{
+	width: 33%;
+	box-shadow:inset 5px 0px 1px -1px #fffae1;
+}
+#bouton2{
+	width: 33%;
+	box-shadow:inset 5px 0px 1px -1px #fffae1;
+}
+footer li{
+	list-style-type: none;
+}
