--- a/CSS/style.css
+++ b/CSS/style.css
@@ -9,6 +9,8 @@ body{
 	height: 100%;
 }
 
+/* ************************************HEADER************************************ */
+
 header{
 	height: 10%;
 	width: 100%;
@@ -41,36 +43,41 @@ header{
 }
 
 .connection{
-	width: 15%;
+	background-color: red;
+	width: 17%;
 	height: 100%;
 	display: flex;
 	justify-content: space-around;
 	align-items: center;
 }
 
-.bouton-register, .bouton-login{
-	background-color: red;
-	width: 50%;
-	height: 100%;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-}
-
 .bouton-R{
-	width: 90%;
-	height: 50%;
+	height: 60px;
+	width: 100px;
 	border: 2px solid rgb(93, 173, 226);
 	border-radius: 5px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 .bouton-L{
+	height: 60px;
+	width: 100px;
 	background-color: rgb(93, 173, 226);
-	width: 90%;
-	height: 50%;
 	border: 2px solid rgb(93, 173, 226);
 	border-radius: 5px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
+
+.txt-bouton-connection p{
+	font-family: "Futura", sans-serif;
+	text-decoration: none;
+}
+
+/* ************************************MAIN************************************ */
 
 main{
 	background-image: url(../images/fresque.png);
@@ -154,11 +161,13 @@ input[type=date]{
 	display: flex;
 	justify-content: center;
 }
+
 .lien_form_login{
 	text-decoration: none underline;
 	color: black;
 }
-/* ****************************FOOTER**************************************** */
+
+/* ************************************FOOTER************************************ */
 
 footer{
 	padding: 20px 0 10px 0;
@@ -166,10 +175,12 @@ footer{
 	color: #FFFAE1;
 	text-align : center;
 }
+
 footer form{
 	margin:0 auto;
 	max-width: 900px;
 }
+
 footer input, textarea, button{
 	border: none;
 	width: 55%;
@@ -179,65 +190,79 @@ footer input, textarea, button{
 	font-family: 'Advent pro', sans-serif;
 	border-radius: 8px;
 }
+
 footer textarea{
 	height: 120px;
 }
+
 footer button{
 	font-size: 1.5em;
 	background-color: #FFFAE1;
 }
+
 footer button:hover{
 	background-color: #e55039;
 	color: #FFFAE1;
 	cursor: pointer;
 	transition: 0.3s ease-in-out;
 }
+
 #trait2{
 	height: 1px;
 	width: 75%;
 	background-color: #FFFAE1;
 	margin: 60px auto;
 }
+
 #copyrighteticons{
 	display: flex;
 	margin-bottom: 20px;
 	padding: 0 10%;
 }
+
 #copyright{
 	width: 50%;
 	text-align: left;
 	color: #FFFAE1;
 }
+
 #icons{
 	width: 50%;
 	text-align: right;
 }
+
 #icons a{
 	display: inline-block;
 	padding: 0 15px;
 	font-size: 1.3em;
 	color: #FFFAE1;
 }
+
 #icons a:hover{
 	transform: scale(1.5);
 	transition: 0.1;
 }
+
 #lien {
 	display: flex;
 	margin: 60px auto;
 }
+
 #bouton{
 	width: 33%;
 	box-shadow:inset 5px 0px 1px -1px #fffae1;	
 }
+
 #bouton1{
 	width: 33%;
 	box-shadow:inset 5px 0px 1px -1px #fffae1;
 }
+
 #bouton2{
 	width: 33%;
 	box-shadow:inset 5px 0px 1px -1px #fffae1;
 }
+
 footer li{
 	list-style-type: none;
 }
