--- a/CSS/style.css
+++ b/CSS/style.css
@@ -125,8 +125,8 @@ header{
 main{
 	background-image: url(../images/fresque.png);
 	background-size: cover;
+	background-attachment: fixed;
 	width: 100%;
-	height: 80%;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -147,6 +147,7 @@ main{
 	align-items: center;
 	border-radius: 4px;
 	box-shadow: 0 10px 10px;
+	margin: 15%;
 }
 
 .login{
@@ -159,6 +160,7 @@ main{
 	align-items: center;
 	border-radius: 4px;
 	box-shadow: 0 10px 10px;
+	margin: 15%;
 }
 
 .form_birthday{
@@ -209,6 +211,51 @@ input[type=date]{
 	text-decoration: none underline;
 	color: black;
 }
+/***************************************main*****************************************/
+.page_acceuil{
+}
+@font-face {
+	font-family: Edelsans;
+	src: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/edelsans_regular-webfont.woff);
+  }
+  body { 
+	margin: 0;
+
+  }
+  section { 
+	height: 100vh; 
+	box-sizing: border-box;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	text-align: center; 
+	flex-direction: column;
+	padding: 2vw;
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	font-size: 1.1em; 
+  }
+  section:first-of-type { 
+	font-size: 1.1em;
+  }
+  section:first-of-type, section.pop { 
+	color: #fff;
+	text-shadow: 0 0 5px rgba(0,0,0,0.4); 
+  }
+  section:nth-of-type(even) { 
+	background: #fff;
+  }
+  section:nth-of-type(1) { 
+	background-image: url(../images/warzone.jpg); 
+  }
+  section:nth-of-type(3) { 
+	background-image: url(../images/fortnite.jpg); 
+  }
+  section:nth-of-type(5) { 
+	background-image: url(../images/pubg.jpg); 
+  }
+
 
 /* ************************************FOOTER************************************ */
 
@@ -217,6 +264,7 @@ footer{
 	background-color : rgb(159, 190, 231); 
 	color: #FFFAE1;
 	text-align : center;
+	position: static;
 }
 
 footer form{
