--- a/CSS/style.css
+++ b/CSS/style.css
@@ -123,10 +123,19 @@ header{
 /* ************************************MAIN************************************ */
 
 main{
+	width: 100%;
+	height: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.background-co{
+	width: 100%;
+	height: 100%;
 	background-image: url(../images/fresque.png);
 	background-size: cover;
 	background-attachment: fixed;
-	width: 100%;
 	display: flex;
 	justify-content: center;
 	align-items: center;
