--- a/CSS/style.css
+++ b/CSS/style.css
@@ -233,10 +233,6 @@ input[type=date]{
 	height: 100vh; 
 	box-sizing: border-box;
 	display: flex;
-	align-items: center;
-	justify-content: center;
-	text-align: center; 
-	flex-direction: column;
 	padding: 2vw;
 	background-size: cover;
 	background-repeat: no-repeat;
@@ -261,6 +257,11 @@ input[type=date]{
   }
   section:nth-of-type(5) { 
 	background-image: url(../images/pubg.jpg); 
+  }
+  .top{
+  	display: flex;
+  	flex-direction: row-reverse;
+  	align-items: space-between;
   }
 
 
