--- a/CSS/style.css
+++ b/CSS/style.css
@@ -120,6 +120,32 @@ header{
   .sidenav a {font-size: 18px;}
 }
 
+.header-bot{
+	background-color: purple;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between; 
+}
+
+.search-et-theme{
+	background-color: red;
+	width: 30%;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-around; 
+}
+
+.bouton-T{
+	height: 60px;
+	width: 100px;
+	background-color: rgb(93, 173, 226);
+	border: 2px solid rgb(93, 173, 226);
+	border-radius: 5px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
 /* ************************************MAIN************************************ */
 
 main{
@@ -191,7 +217,7 @@ main{
 	text-align: center;
 }
 
-input[type=text], input[type=email], input[type=password], input[type=submit]{
+input[type=text], input[type=email], input[type=password], input[type=submit], input[type=search]{
 	border: none;
 	border-bottom: 2px solid rgb(93, 173, 226);
 	background-color: white;
@@ -220,59 +246,38 @@ input[type=date]{
 .form_login{
 	text-align: center;
 }
-/***************************************main*****************************************/
+/* ************************************MAIN************************************ */
 
-@font-face{
-	font-family: Edelsans;
-	src: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/edelsans_regular-webfont.woff);
-}
-
-body{ 
-	margin: 0;
-}
-
-section{ 
-	height: 100vh; 
-	box-sizing: border-box;
+.main-container{
+	background-color: green;
+	width: 100%;
+	height: 1000px;
 	display: flex;
-	padding: 2vw;
-	background-size: cover;
-	background-repeat: no-repeat;
-	background-attachment: fixed;
-	font-size: 1.1em; 
+	justify-content: space-around;
+	align-items: center;
+	flex-direction: column;
 }
 
-section:first-of-type{ 
-	font-size: 1.1em;
+.plus-recent{
+	background-color: red;
+	width: 50%;
+	height: 30%;
+	text-align: center;
 }
 
-section:first-of-type, section.pop{ 
-	color: #fff;
-	text-shadow: 0 0 5px rgba(0,0,0,0.4); 
+.plus-like{
+	background-color: blue;
+	width: 50%;
+	height: 30%;
+	text-align: center;
 }
 
-section:nth-of-type(even){ 
-	background: #fff;
+.plus-reponse{
+	background-color: yellow;
+	width: 50%;
+	height: 30%;
+	text-align: center;
 }
-
-section:nth-of-type(1){ 
-	background-image: url(../images/warzone.jpg); 
-}
-
-section:nth-of-type(3){ 
-	background-image: url(../images/fortnite.jpg); 
-}
-
-section:nth-of-type(5){ 
-	background-image: url(../images/pubg.jpg);
-}
-
-.top{
-  	display: flex;
-  	flex-direction: row-reverse;
-  	align-items: space-between;
-}
-
 /* ************************************FOOTER************************************ */
 
 footer{
