--- a/CSS/style.css
+++ b/CSS/style.css
@@ -136,14 +136,19 @@ header{
 }
 
 .bouton-T{
-	height: 60px;
-	width: 100px;
+	height: 50px;
+	width: 50px;
 	background-color: rgb(93, 173, 226);
 	border: 2px solid rgb(93, 173, 226);
-	border-radius: 5px;
+	border-radius: 1000px;
 	display: flex;
 	justify-content: center;
 	align-items: center;
+}
+
+.fa-moon-o{
+	height: 40px;
+	width: auto;
 }
 
 /* ************************************MAIN************************************ */
@@ -263,6 +268,8 @@ input[type=date]{
 	width: 50%;
 	height: 30%;
 	text-align: center;
+	border-radius: 4px;
+	box-shadow: 0 10px 10px;
 }
 
 .plus-like{
@@ -270,6 +277,8 @@ input[type=date]{
 	width: 50%;
 	height: 30%;
 	text-align: center;
+	border-radius: 4px;
+	box-shadow: 0 10px 10px;
 }
 
 .plus-reponse{
@@ -277,6 +286,8 @@ input[type=date]{
 	width: 50%;
 	height: 30%;
 	text-align: center;
+	border-radius: 4px;
+	box-shadow: 0 10px 10px;
 }
 /* ************************************FOOTER************************************ */
 
