--- a/CSS/style_clair.css
+++ b/CSS/style_clair.css
@@ -258,7 +258,7 @@ input[type=date]{
 	width: 100%;
 	height: 1000px;
 	display: flex;
-	justify-content: space-between;
+	justify-content: space-around;
 	align-items: center;
 	flex-direction: column;
 }
