--- a/CSS/style_sombre.css
+++ b/CSS/style_sombre.css
@@ -192,7 +192,7 @@ main{
 	height: 50%;
 	display: flex;
 	flex-direction: column;
-	justify-content: space-between;
+	justify-content: space-around;
 	align-items: center;
 	border-radius: 4px;
 	box-shadow: 0 10px 10px;
