--- a/CSS/style_clair.css
+++ b/CSS/style_clair.css
@@ -143,16 +143,49 @@ header{
 	border-radius: 1000px;
 	display: flex;
 	justify-content: center;
-	align-items: center;
 }
 
 .fa-moon-o{
 	height: 40px;
 	width: auto;
 }
+/*Menu déroulant */
+.bouton-profil{
+	position: relative;
+	display: inline-block;
+}
+
+.dropdown-menu-profil{
+	display: none;
+	position: absolute;
+	background-color: #f9f9f9;
+	min-width: 130px;
+	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+	z-index: 1;
+}
+
+.dropdown-menu-profil a{
+	color: black;
+	padding: 12px 16px;
+	text-decoration: none;
+	display: block;
+	background-color: rgb(234, 237, 237);
+}
+
+.dropdown-menu-profil a:hover{
+	background-color: rgb(219, 219, 219);
+}
+
+.bouton-profil:hover .dropdown-menu-profil{
+	display: block;
+}
+
+.bouton-profil:hover .bouton-lieux{
+	background-color: rgb(219, 219, 219);
+}
+/*Fin Menu Déroulant */
 
 /* ************************************MAIN************************************ */
-
 main{
 	width: 100%;
 }
