--- a/CSS/style_clair.css
+++ b/CSS/style_clair.css
@@ -43,7 +43,7 @@ header{
 	text-decoration: none;
 }
 
-.connection{
+.connexion{
 	width: 17%;
 	height: 100%;
 	display: flex;
@@ -72,7 +72,7 @@ header{
 	align-items: center;
 }
 
-.txt-bouton-connection p{
+.txt-bouton-connexion p{
 	text-decoration: none;
 }
 
@@ -151,11 +151,12 @@ header{
 }
 /*Menu déroulant */
 .bouton-profil{
+	width:10%;
 	position: relative;
 	display: inline-block;
 }
 .avatar{
-	width : 10%;
+	width : 45%;
 	clip-path:ellipse(50% 50%);
 }
 
@@ -163,7 +164,7 @@ header{
 	display: none;
 	position: absolute;
 	background-color: #f9f9f9;
-	min-width: 130px;
+	min-width: 10%;
 	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 	z-index: 1;
 }
@@ -193,6 +194,9 @@ header{
 main{
 	width: 100%;
 }
+.post-container{
+	align-items: center;
+}
 
 .background-co{
 	width: 100%;
@@ -208,19 +212,6 @@ main{
 .titre_register{
 	color: rgb(93, 173, 226);
 	font-size: 20px;
-}
-
-.register{
-	background-color: white;
-	width: 30%;
-	height: 80%;
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
-	align-items: center;
-	border-radius: 4px;
-	box-shadow: 0 10px 10px;
-	margin: 15%;
 }
 
 .login{
