--- a/CSS/style_sombre.css
+++ b/CSS/style_sombre.css
@@ -4,7 +4,7 @@ html{
 }
 
 body{
-	background-color: rgb(53, 36, 36);
+	background-color:#000000;
 	margin: 0;
 	height: 100%;
 	font-family: "Lato", sans-serif;
@@ -43,7 +43,7 @@ header{
 	text-decoration: none;
 }
 
-.connection{
+.connexion{
 	width: 17%;
 	height: 100%;
 	display: flex;
@@ -72,7 +72,7 @@ header{
 	align-items: center;
 }
 
-.txt-bouton-connection p{
+.txt-bouton-connexion p{
 	text-decoration: none;
 }
 
@@ -152,12 +152,12 @@ header{
 
 /*Menu déroulant */
 .bouton-profil{
+	width:10%;
 	position: relative;
 	display: inline-block;
 }
-
 .avatar{
-	width : 10%;
+	width : 45%;
 	clip-path:ellipse(50% 50%);
 }
 
@@ -165,7 +165,7 @@ header{
 	display: none;
 	position: absolute;
 	background-color: #f9f9f9;
-	min-width: 130px;
+	min-width: 10%;
 	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 	z-index: 1;
 }
@@ -186,7 +186,7 @@ header{
 	display: block;
 }
 
-.bouton-profil:hover .bouton-lieux{
+.bouton-profil:hover .bouton-profil{
 	background-color: rgb(219, 219, 219);
 }
 /*Fin Menu Déroulant */
@@ -297,7 +297,7 @@ input[type=date]{
 	width: 100%;
 	height: 1000px;
 	display: flex;
-	justify-content: space-between;
+	justify-content: space-around;
 	align-items: center;
 	flex-direction: column;
 }
