--- a/CSS/style_clair.css
+++ b/CSS/style_clair.css
@@ -338,6 +338,10 @@ input[type=date]{
 }
 
 /* Fin main post */ 
+/*Main Post*/
+.commentaire{
+	display: flex;
+}
 
 /* ************************************FOOTER************************************ */
 
