--- a/CSS/style_clair.css
+++ b/CSS/style_clair.css
@@ -18,12 +18,12 @@ header{
 	width: 100%;
 	display: flex;
 	justify-content: space-between;
-	text-align: center;
+	align-items: center;
 	border-bottom: 2px solid rgb(93, 173, 226);	
 }
 
 .logo{
-	width: 95%;
+	width: 130%;
 	height: auto;
 }
 
@@ -77,62 +77,77 @@ header{
 }
 
 .sidenav{
-  height: 100%;
-  width: 0;
-  position: fixed;
-  z-index: 1;
-  top: 0;
-  left: 0;
-  background-color: #111;
-  overflow-x: hidden;
-  transition: 0.5s;
-  padding-top: 60px;
+	height: 100%;
+	width: 0;
+	position: fixed;
+	z-index: 1;
+	top: 0;
+	left: 0;
+	background-color: #111;
+	overflow-x: hidden;
+	transition: 0.5s;
+	padding-top: 60px;
 }
 
 .sidenav a{
-  padding: 8px 8px 8px 32px;
-  text-decoration: none;
-  font-size: 25px;
-  color: #818181;
-  display: block;
-  transition: 0.3s;
+	padding: 8px 8px 8px 32px;
+	text-decoration: none;
+	font-size: 25px;
+	color: #818181;
+	display: block;
+	transition: 0.3s;
 }
 
 .sidenav a:hover{
-  color: #f1f1f1;
+	color: #f1f1f1;
 }
 
 .sidenav .closebtn{
-  position: absolute;
-  top: 0;
-  right: 25px;
-  font-size: 36px;
-  margin-left: 50px;
+	position: absolute;
+	top: 0;
+	right: 25px;
+	font-size: 36px;
+	margin-left: 50px;
 }
 
 #main{
-  transition: margin-left .5s;
-  padding: 16px;
+	transition: margin-left .5s;
+	padding: 16px;
 }
 
 @media screen and (max-height: 450px){
-  .sidenav {padding-top: 15px;}
-  .sidenav a {font-size: 18px;}
+	.sidenav{
+		padding-top: 15px;
+	}
+	.sidenav a{
+		font-size: 18px;
+	}
 }
 
 .header-bot{
-	background-color: purple;
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between; 
+	border-bottom: 2px solid rgb(93, 173, 226);
 }
 
 .search-et-theme{
-	background-color: red;
 	width: 30%;
 	display: flex;
 	flex-direction: row;
-	justify-content: space-around; 
+	justify-content: space-between;
+	padding: 5px;
+}
+
+.bouton-theme{
+	display: flex;
+	align-items: center;
+}
+
+.search{
+	display: flex;
+	flex-direction: row;
+	align-items: center;
 }
 
 .bouton-T{
@@ -149,48 +164,63 @@ header{
 	height: 40px;
 	width: auto;
 }
+
 /*Menu déroulant */
+
 .bouton-profil{
-	width:10%;
+	width: 5%;
 	position: relative;
 	display: inline-block;
 }
 .avatar{
-	width : 45%;
-	clip-path:ellipse(50% 50%);
+	width : 100%;
+	clip-path: ellipse(50% 50%);
 }
 .change_avatar{
 	width : 10%;
 	clip-path:ellipse(50% 50%);
 }
 
-.dropdown-menu-profil{
+.dropbtn {
+	background-color: #4CAF50;
+	color: white;
+	padding: 16px;
+	font-size: 16px;
+	border: none;
+	cursor: pointer;
+}
+
+.dropdown {
+	width: 5%;
+	position: relative;
+	display: inline-block;
+}
+
+.dropdown-content {
 	display: none;
 	position: absolute;
+	right: 0;
 	background-color: #f9f9f9;
-	min-width: 10%;
+	min-width: 160px;
 	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 	z-index: 1;
 }
 
-.dropdown-menu-profil a{
+.dropdown-content a {
 	color: black;
 	padding: 12px 16px;
 	text-decoration: none;
 	display: block;
-	background-color: rgb(234, 237, 237);
 }
 
-.dropdown-menu-profil a:hover{
-	background-color: rgb(219, 219, 219);
+.dropdown-content a:hover{
+	background-color: #f1f1f1;
 }
-
-.bouton-profil:hover .dropdown-menu-profil{
+.dropdown:hover .dropdown-content{
 	display: block;
 }
-
-.bouton-profil:hover .bouton-profil{
-	background-color: rgb(219, 219, 219);
+.dropdown:hover .dropbtn{
+	background-color: #3e8e41;
 }
 /*Fin Menu Déroulant */
 
@@ -286,9 +316,11 @@ input[type=date]{
 /* ************************************MAIN************************************ */
 
 .main-container{
-	background-color: green;
+	background-image: url(../images/fresque.png);
+	background-size: cover;
+	background-attachment: fixed;
 	width: 100%;
-	height: 1000px;
+	height: 1200px;
 	display: flex;
 	justify-content: space-around;
 	align-items: center;
@@ -349,13 +381,13 @@ input[type=date]{
 }
 
 .post-contenu{
-	height: 50%;
-	border-top: solid 2px gray;
-	border-bottom: solid 2px gray;
+	height: 60%;
+	border-top: solid 2px rgb(93, 173, 226);
+	border-bottom: solid 2px rgb(93, 173, 226);
 }
 
 .plus-like{
-	background-color: blue;
+	background-color: white;
 	width: 50%;
 	height: 30%;
 	text-align: center;
@@ -364,7 +396,7 @@ input[type=date]{
 }
 
 .plus-reponse{
-	background-color: yellow;
+	background-color: white;
 	width: 50%;
 	height: 30%;
 	text-align: center;
