--- a/CSS/style_clair.css
+++ b/CSS/style_clair.css
@@ -429,18 +429,36 @@ input[type=date]{
 	display: flex;
 }
 /* ************************************ALL_USER********************************** */
-
+.user{
+	background-color: white;
+	width: 50%;
+	height: 30%;
+	text-align: center;
+	padding: 5%;
+	margin: 3%;
+	overflow: auto;	
+	border-radius: 4px;
+	box-shadow: 0 10px 10px;
+}
 .main-cont{
-	background-color: aqua;
+	background-image: url(../images/fresque.png);
 	background-size: cover;
 	background-attachment: fixed;
 	width: 100%;
-	
+	height: 1200px;
+	justify-content: space-around;
+	align-items: center;
+	flex-direction: column;
+	overflow: auto;
+}
+.cont{
 	display: flex;
 	justify-content: space-around;
 	align-items: center;
 	flex-direction: column;
+	overflow: auto;	
 }
+
 
 /* ************************************FOOTER************************************ */
 
