--- a/CSS/style_clair.css
+++ b/CSS/style_clair.css
@@ -424,6 +424,27 @@ input[type=date]{
 }
 
 /* Fin main post */ 
+
+.main-profil{
+	background-image: url(../images/fresque.png);
+	background-size: cover;
+	background-attachment: fixed;
+	width: 100%;
+	height: 500px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.avatar-mdp{
+	background-color: white;
+	width: 50%;
+	height: 30%;
+	text-align: center;
+	border-radius: 4px;
+	box-shadow: 0 10px 10px;
+}
+
 /*Main Post*/
 .commentaire{
 	display: flex;
