--- a/CSS/style_clair.css
+++ b/CSS/style_clair.css
@@ -11,6 +11,10 @@ body{
   	transition: background-color .5s;
 }
 
+ul {
+  list-style-type: none;
+}  
+
 /* ************************************HEADER************************************ */
 
 header{
