--- a/CSS/style_clair.css
+++ b/CSS/style_clair.css
@@ -12,8 +12,15 @@ body{
 }
 
 ul {
-  list-style-type: none;
-}  
+  	list-style-type: none;
+  	margin-block-start: 0;
+	margin-block-end: 0;
+	padding-inline-start: 0;
+} 
+
+li{
+	list-style-type: none;
+} 
 
 /* ************************************HEADER************************************ */
 
@@ -340,6 +347,20 @@ input[type=date]{
 	box-shadow: 0 10px 10px;
 }
 
+.resultat-recherche{
+	display: flex;
+	justify-content: center;
+}
+
+.recherche{
+	background-color: white;
+	width: 50%;
+	height: 30%;
+	text-align: center;
+	border-radius: 4px;
+	box-shadow: 0 10px 10px;
+}
+
 .titre-post-categorie{
 	margin: 10px;
 }
@@ -388,6 +409,7 @@ input[type=date]{
 	height: 60%;
 	border-top: solid 2px rgb(93, 173, 226);
 	border-bottom: solid 2px rgb(93, 173, 226);
+	word-wrap: break-word;
 }
 
 .plus-like{
