--- a/CSS/style_clair.css
+++ b/CSS/style_clair.css
@@ -227,18 +227,22 @@ header{
 .dropdown-content a:hover{
 	background-color: #f1f1f1;
 }
+
 .dropdown:hover .dropdown-content{
 	display: block;
 }
+
 .dropdown:hover .dropbtn{
 	background-color: #3e8e41;
 }
+
 /*Fin Menu Déroulant */
 
 /* ************************************MAIN************************************ */
 main{
 	width: 100%;
 }
+
 .post-container{
 	align-items: center;
 }
@@ -324,6 +328,7 @@ input[type=date]{
 .form_login{
 	text-align: center;
 }
+
 /* ************************************MAIN************************************ */
 
 .main-container{
@@ -400,6 +405,7 @@ input[type=date]{
 .img-avatar{
 	width: 30%;
 	height: auto;
+	clip-path: ellipse(50% 50%);
 }
 
 .auteur{
@@ -454,21 +460,43 @@ input[type=date]{
 	box-shadow: 0 10px 10px;
 	margin-bottom: 10px;
 }
+
+.profil-avatar-img{
+	width: 70%;
+	clip-path: ellipse(50% 50%);
+}
+
+.profil-avatar{
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: flex-start;
+	width: 20%;
+}
+
 /* main post */
+
 .post-container{
 	display: flex;
 	background-color: gray;
 	height: 100%;
 	justify-content:center ;
 }
+
 .box-newpost{
 	display: flex;
-	background-color: red;
+	background-color: white;
 	flex-direction: column;
+	margin-bottom: 50px;
+	padding: 5px;
+	border-radius: 4px;
+	box-shadow: 0 10px 10px;
 }
+
 .newpost-titre{
-	background-color: red;
+	background-color: white;
 }
+
 .choix-titre{
 	display: flex;
 	align-items: center;
@@ -491,17 +519,20 @@ input[type=date]{
 .avatar-mdp{
 	background-color: white;
 	width: 50%;
-	height: 30%;
+	height: 50%;
 	text-align: center;
 	border-radius: 4px;
 	box-shadow: 0 10px 10px;
 }
 
 /*Main Post*/
+
 .commentaire{
 	display: flex;
 }
+
 /* ************************************ALL_USER********************************** */
+
 .user{
 	background-color: white;
 	width: 50%;
@@ -513,6 +544,7 @@ input[type=date]{
 	border-radius: 4px;
 	box-shadow: 0 10px 10px;
 }
+
 .main-cont{
 	background-image: url(../images/fresque.png);
 	background-size: cover;
@@ -524,6 +556,7 @@ input[type=date]{
 	flex-direction: column;
 	overflow: auto;
 }
+
 .cont{
 	display: flex;
 	justify-content: space-around;
@@ -533,6 +566,7 @@ input[type=date]{
 }
 
 /* ************************************MY_POST********************************** */
+
 .mespost{
 	background-color: white;
 	width: 50%;
@@ -689,5 +723,3 @@ footer ul{
 footer li{
 	list-style-type: none;
 }
-
-
