--- a/CSS/style_clair.css
+++ b/CSS/style_clair.css
@@ -344,9 +344,56 @@ input[type=date]{
 	overflow-x: auto;
 }
 
+.main-container-cat{
+	background-image: url(../images/fresque.png);
+	background-size: cover;
+	background-attachment: fixed;
+	width: 100%;
+	height: auto;
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+	flex-direction: row;
+	overflow-x: auto;
+}
+
+.vide2{
+	width: 25%;
+	height: 100%;
+	background-color: red;
+}
+
+.post-all{
+	width: 25%;
+	height: 100%;
+	background-color: white;
+	display: flex;
+	justify-content: flex-start;
+	flex-direction: column;
+	padding: 10px;
+	border-left: 2px solid rgb(93, 173, 226);
+	overflow: scroll;
+}
+
+.post-liste{
+	width: 50%;
+	height: 100%;
+}
+
 .plus-recent{
 	background-color: white;
 	width: 50%;
+	height: 350px;
+	text-align: center;
+	border-radius: 4px;
+	box-shadow: 0 10px 10px;
+	margin-bottom: 10px;
+	margin-top: 10px;
+}
+
+.plus-recent-cat{
+	background-color: white;
+	width: 100%;
 	height: 350px;
 	text-align: center;
 	border-radius: 4px;
@@ -451,9 +498,29 @@ input[type=date]{
 	margin-bottom: 10px;
 }
 
+.plus-like-cat{
+	background-color: white;
+	width: 100%;
+	height: 350px;
+	text-align: center;
+	border-radius: 4px;
+	box-shadow: 0 10px 10px;
+	margin-bottom: 10px;
+}
+
 .plus-reponse{
 	background-color: white;
 	width: 50%;
+	height: 350px;
+	text-align: center;
+	border-radius: 4px;
+	box-shadow: 0 10px 10px;
+	margin-bottom: 10px;
+}
+
+.plus-reponse-cat{
+	background-color: white;
+	width: 100%;
 	height: 350px;
 	text-align: center;
 	border-radius: 4px;
@@ -612,6 +679,10 @@ input[type=date]{
 	background: #fff;
   }
 
+.lien-post-cat{
+	display: flex;
+	flex-direction: column;
+}
 
 /* ************************************FOOTER************************************ */
 
