--- a/CSS/style_clair.css
+++ b/CSS/style_clair.css
@@ -352,7 +352,6 @@ input[type=date]{
 	height: auto;
 	display: flex;
 	justify-content: space-around;
-	align-items: center;
 	flex-direction: row;
 	overflow-x: auto;
 }
@@ -360,7 +359,6 @@ input[type=date]{
 .vide2{
 	width: 25%;
 	height: 100%;
-	background-color: red;
 }
 
 .post-all{
@@ -373,6 +371,8 @@ input[type=date]{
 	padding: 10px;
 	border-left: 2px solid rgb(93, 173, 226);
 	overflow: scroll;
+	margin-top: 10px;
+	border-radius: 4px;
 }
 
 .post-liste{
@@ -558,6 +558,8 @@ input[type=date]{
 	padding: 5px;
 	border-radius: 4px;
 	box-shadow: 0 10px 10px;
+	width: 70%;
+	height: 500px;
 }
 
 .newpost-titre{
