--- a/CSS/style_clair.css
+++ b/CSS/style_clair.css
@@ -462,6 +462,7 @@ input[type=date]{
 	display: flex;
 	justify-content: center;
 	flex-direction: column;
+	border-top: 2px solid rgb(93, 173, 226);
 }
 
 .titre-post-categorie{
@@ -516,13 +517,19 @@ input[type=date]{
 	word-wrap: break-word;
 }
 
+.post-contenu2{
+	height: 200px;
+	border-top: solid 2px rgb(93, 173, 226);
+	border-bottom: solid 2px rgb(93, 173, 226);
+	word-wrap: break-word;
+}
+
 .mess-contenu{
 	height: 30%;
 	border-top: solid 2px rgb(93, 173, 226);
 	border-bottom: solid 2px rgb(93, 173, 226);
 	word-wrap: break-word;
 }
-
 
 .plus-like{
 	background-color: white;
