--- a/CSS/style_clair.css
+++ b/CSS/style_clair.css
@@ -278,6 +278,19 @@ main{
 	margin: 15%;
 }
 
+.register{
+	background-color: white;
+	width: 30%;
+	height: 50%;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	align-items: center;
+	border-radius: 4px;
+	box-shadow: 0 10px 10px;
+	margin: 15%;
+}
+
 .form_birthday{
 	display: flex;
 	flex-direction: column;
