--- a/CSS/style_sombre.css
+++ b/CSS/style_sombre.css
@@ -4,12 +4,23 @@ html{
 }
 
 body{
-	background-color:#000000;
+	background-color: white;
 	margin: 0;
 	height: 100%;
 	font-family: "Lato", sans-serif;
   	transition: background-color .5s;
 }
+
+ul {
+  	list-style-type: none;
+  	margin-block-start: 0;
+	margin-block-end: 0;
+	padding-inline-start: 0;
+} 
+
+li{
+	list-style-type: none;
+} 
 
 /* ************************************HEADER************************************ */
 
@@ -18,12 +29,12 @@ header{
 	width: 100%;
 	display: flex;
 	justify-content: space-between;
-	text-align: center;
+	align-items: center;
 	border-bottom: 2px solid rgb(93, 173, 226);	
 }
 
 .logo{
-	width: 95%;
+	width: 130%;
 	height: auto;
 }
 
@@ -77,62 +88,77 @@ header{
 }
 
 .sidenav{
-  height: 100%;
-  width: 0;
-  position: fixed;
-  z-index: 1;
-  top: 0;
-  left: 0;
-  background-color: #111;
-  overflow-x: hidden;
-  transition: 0.5s;
-  padding-top: 60px;
+	height: 100%;
+	width: 0;
+	position: fixed;
+	z-index: 1;
+	top: 0;
+	left: 0;
+	background-color: #111;
+	overflow-x: hidden;
+	transition: 0.5s;
+	padding-top: 60px;
 }
 
 .sidenav a{
-  padding: 8px 8px 8px 32px;
-  text-decoration: none;
-  font-size: 25px;
-  color: #818181;
-  display: block;
-  transition: 0.3s;
+	padding: 8px 8px 8px 32px;
+	text-decoration: none;
+	font-size: 25px;
+	color: #818181;
+	display: block;
+	transition: 0.3s;
 }
 
 .sidenav a:hover{
-  color: #f1f1f1;
+	color: #f1f1f1;
 }
 
 .sidenav .closebtn{
-  position: absolute;
-  top: 0;
-  right: 25px;
-  font-size: 36px;
-  margin-left: 50px;
+	position: absolute;
+	top: 0;
+	right: 25px;
+	font-size: 36px;
+	margin-left: 50px;
 }
 
 #main{
-  transition: margin-left .5s;
-  padding: 16px;
+	transition: margin-left .5s;
+	padding: 16px;
 }
 
 @media screen and (max-height: 450px){
-  .sidenav {padding-top: 15px;}
-  .sidenav a {font-size: 18px;}
+	.sidenav{
+		padding-top: 15px;
+	}
+	.sidenav a{
+		font-size: 18px;
+	}
 }
 
 .header-bot{
-	background-color: purple;
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between; 
+	border-bottom: 2px solid rgb(93, 173, 226);
 }
 
 .search-et-theme{
-	background-color: red;
 	width: 30%;
 	display: flex;
 	flex-direction: row;
-	justify-content: space-around; 
+	justify-content: space-between;
+	padding: 5px;
+}
+
+.bouton-theme{
+	display: flex;
+	align-items: center;
+}
+
+.search{
+	display: flex;
+	flex-direction: row;
+	align-items: center;
 }
 
 .bouton-T{
@@ -151,49 +177,76 @@ header{
 }
 
 /*Menu déroulant */
+
 .bouton-profil{
-	width:10%;
+	width: 5%;
 	position: relative;
 	display: inline-block;
 }
 .avatar{
-	width : 45%;
+	width : 100%;
+	clip-path: ellipse(50% 50%);
+}
+.change_avatar{
+	width : 10%;
 	clip-path:ellipse(50% 50%);
 }
 
-.dropdown-menu-profil{
+.dropbtn {
+	background-color: #4CAF50;
+	color: white;
+	padding: 16px;
+	font-size: 16px;
+	border: none;
+	cursor: pointer;
+}
+
+.dropdown {
+	width: 5%;
+	position: relative;
+	display: inline-block;
+}
+
+.dropdown-content {
 	display: none;
 	position: absolute;
+	right: 0;
 	background-color: #f9f9f9;
-	min-width: 10%;
+	min-width: 160px;
 	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 	z-index: 1;
 }
 
-.dropdown-menu-profil a{
+.dropdown-content a {
 	color: black;
 	padding: 12px 16px;
 	text-decoration: none;
 	display: block;
-	background-color: rgb(234, 237, 237);
 }
 
-.dropdown-menu-profil a:hover{
-	background-color: rgb(219, 219, 219);
+.dropdown-content a:hover{
+	background-color: #f1f1f1;
 }
 
-.bouton-profil:hover .dropdown-menu-profil{
+.dropdown:hover .dropdown-content{
 	display: block;
 }
 
-.bouton-profil:hover .bouton-profil{
-	background-color: rgb(219, 219, 219);
+.dropdown:hover .dropbtn{
+	background-color: #3e8e41;
 }
-/*Fin Menu Déroulant */
-/* ************************************MAIN************************************ */
 
+/*Fin Menu Déroulant */
+
+/* ************************************MAIN************************************ */
 main{
 	width: 100%;
+}
+#editor{
+	height:350px;
+}
+.post-container{
+	align-items: center;
 }
 
 .background-co{
@@ -212,10 +265,10 @@ main{
 	font-size: 20px;
 }
 
-.register{
+.login{
 	background-color: white;
 	width: 30%;
-	height: 80%;
+	height: 50%;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
@@ -225,13 +278,13 @@ main{
 	margin: 15%;
 }
 
-.login{
+.register{
 	background-color: white;
 	width: 30%;
 	height: 50%;
 	display: flex;
 	flex-direction: column;
-	justify-content: space-around;
+	justify-content: space-between;
 	align-items: center;
 	border-radius: 4px;
 	box-shadow: 0 10px 10px;
@@ -290,44 +343,444 @@ input[type=date]{
 .form_login{
 	text-align: center;
 }
+
 /* ************************************MAIN************************************ */
 
 .main-container{
-	background-color: green;
+	background-image: url(../images/fresque.png);
+	background-size: cover;
+	background-attachment: fixed;
 	width: 100%;
-	height: 1000px;
+	height: auto;
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+	flex-direction: column;
+	overflow-x: auto;
+}
+
+.main-container-cat{
+	background-image: url(../images/fresque.png);
+	background-size: cover;
+	background-attachment: fixed;
+	width: 100%;
+	height: auto;
+	display: flex;
+	justify-content: space-around;
+	flex-direction: row;
+	overflow-x: auto;
+}
+
+.vide2{
+	width: 25%;
+	height: 100%;
+}
+
+.post-all{
+	width: 25%;
+	height: 100%;
+	background-color: white;
+	display: flex;
+	justify-content: flex-start;
+	flex-direction: column;
+	padding: 10px;
+	border-left: 2px solid rgb(93, 173, 226);
+	overflow: scroll;
+	margin-top: 10px;
+	border-radius: 4px;
+}
+
+.post-liste{
+	width: 50%;
+	height: 100%;
+	display: flex;
+	justify-content: center;
+	flex-direction: column;
+}
+
+.post-liste-titre{
+	text-align: center;
+}
+
+.plus-recent{
+	background-color: white;
+	width: 50%;
+	height: 350px;
+	text-align: center;
+	border-radius: 4px;
+	box-shadow: 0 10px 10px;
+	margin-bottom: 10px;
+	margin-top: 10px;
+}
+
+.plus-recent-cat{
+	background-color: white;
+	width: 100%;
+	height: 350px;
+	text-align: center;
+	border-radius: 4px;
+	box-shadow: 0 10px 10px;
+	margin-bottom: 10px;
+	margin-top: 10px;
+}
+
+.mypost{
+	background-color: white;
+	width: 50%;
+	height: 350px;
+	text-align: center;
+	border-radius: 4px;
+	box-shadow: 0 10px 10px;
+	margin-bottom: 10px;
+}
+
+.mymess{
+	background-color: white;
+	width: 50%;
+	height: 200px;
+	text-align: center;
+	border-radius: 4px;
+	box-shadow: 0 10px 10px;
+	margin-bottom: 10px;
+}
+
+.mymess2{
+	background-color: white;
+	width: 100%;
+	height: 200px;
+	text-align: center;
+	margin-bottom: 10px;
+	border-bottom: 2px solid rgb(93, 173, 226);
+
+}
+
+.resultat-recherche{
+	display: flex;
+	justify-content: center;
+}
+
+.recherche{
+	background-color: white;
+	width: 50%;
+	height: 30%;
+	text-align: center;
+	border-radius: 4px;
+	box-shadow: 0 10px 10px;
+	margin-top: 10px;
+	margin-bottom: 10px;
+}
+
+.nb-like{
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: center;
+	height: 25px;
+}
+
+.reponse{
+	display: flex;
+	justify-content: center;
+	flex-direction: column;
+	border-top: 2px solid rgb(93, 173, 226);
+}
+
+.titre-post-categorie{
+	margin: 10px;
+}
+
+.bouton-delete{
+	display: flex;
+	justify-content: flex-end;
+}
+
+.plus-recent-container, .plus-reponse-container, .plus-like-container{
+	height: 70%;
+}
+
+.img-avatar{
+	width: 30%;
+	height: auto;
+	clip-path: ellipse(50% 50%);
+}
+
+.auteur{
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	align-items: center;
+	padding: 5px;
+}
+
+.titre-post{
+	display: flex;
+	justify-content: center;
+	width: 33%;
+}
+
+.vide{
+	width: 33%;
+}
+
+.utilisateur{
+	display: flex;
+	flex-direction: row;
+	justify-content: flex-start;
+	align-items: center;
+	width: 33%;
+}
+
+.post-contenu{
+	height: 55%;
+	border-top: solid 2px rgb(93, 173, 226);
+	border-bottom: solid 2px rgb(93, 173, 226);
+	word-wrap: break-word;
+}
+
+.post-contenu2{
+	height: 200px;
+	border-top: solid 2px rgb(93, 173, 226);
+	border-bottom: solid 2px rgb(93, 173, 226);
+	word-wrap: break-word;
+}
+
+.mess-contenu{
+	height: 30%;
+	border-top: solid 2px rgb(93, 173, 226);
+	border-bottom: solid 2px rgb(93, 173, 226);
+	word-wrap: break-word;
+}
+
+.plus-like{
+	background-color: white;
+	width: 50%;
+	height: 350px;
+	text-align: center;
+	border-radius: 4px;
+	box-shadow: 0 10px 10px;
+	margin-bottom: 10px;
+}
+
+.plus-like-cat{
+	background-color: white;
+	width: 100%;
+	height: 350px;
+	text-align: center;
+	border-radius: 4px;
+	box-shadow: 0 10px 10px;
+	margin-bottom: 10px;
+}
+
+.plus-reponse{
+	background-color: white;
+	width: 50%;
+	height: 350px;
+	text-align: center;
+	border-radius: 4px;
+	box-shadow: 0 10px 10px;
+	margin-bottom: 10px;
+}
+
+.plus-reponse-cat{
+	background-color: white;
+	width: 100%;
+	height: 350px;
+	text-align: center;
+	border-radius: 4px;
+	box-shadow: 0 10px 10px;
+	margin-bottom: 10px;
+}
+
+.view-post{
+	background-color: white;
+	width: 70%;
+	text-align: center;
+	border-radius: 4px;
+	box-shadow: 0 10px 10px;
+	margin-bottom: 10px;
+	margin-top: 10px;
+}
+
+.profil-avatar-img{
+	width: 70%;
+	clip-path: ellipse(50% 50%);
+}
+
+.profil-avatar{
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: flex-start;
+	width: 20%;
+}
+
+/* main post */
+
+.post-container{
+	display: flex;
+	background-color: gray;
+	height: 100%;
+	justify-content:center ;
+}
+
+.box-newpost{
+	display: flex;
+	background-color: white;
+	flex-direction: column;
+	margin-bottom: 50px;
+	padding: 5px;
+	border-radius: 4px;
+	box-shadow: 0 10px 10px;
+	width: 70%;
+	height: 500px;
+}
+
+.newpost-titre{
+	background-color: white;
+}
+
+.choix-titre{
+	display: flex;
+	align-items: center;
+}
+
+/* Fin main post */ 
+
+.main-profil{
+	background-image: url(../images/fresque.png);
+	background-size: cover;
+	background-attachment: fixed;
+	width: 100%;
+	height: 500px;
 	display: flex;
 	justify-content: space-around;
 	align-items: center;
 	flex-direction: column;
 }
 
-.plus-recent{
-	background-color: red;
+.main-avatar{
+	background-color: white;
 	width: 50%;
-	height: 30%;
+	height: 50%;
+	text-align: center;
+	border-radius: 4px;
+	box-shadow: 0 10px 10px;
+	margin-bottom: 10px;
+	margin-top: 10px;
+}
+
+.modif{
+	background-color: white;
+	width: 50%;
+	height: 50%;
+	text-align: center;
+	border-radius: 4px;
+	box-shadow: 0 10px 10px;
+	margin-bottom: 10px;
+	margin-top: 10px;
+}
+
+.avatar-mdp{
+	background-color: white;
+	width: 50%;
+	height: 50%;
 	text-align: center;
 	border-radius: 4px;
 	box-shadow: 0 10px 10px;
 }
 
-.plus-like{
-	background-color: blue;
+/*Main Post*/
+
+.commentaire{
+	display: flex;
+}
+
+/* ************************************ALL_USER********************************** */
+
+.user{
+	background-color: white;
 	width: 50%;
 	height: 30%;
 	text-align: center;
+	padding: 5%;
+	margin: 3%;
+	overflow: auto;	
 	border-radius: 4px;
 	box-shadow: 0 10px 10px;
 }
 
-.plus-reponse{
-	background-color: yellow;
+.main-cont{
+	background-image: url(../images/fresque.png);
+	background-size: cover;
+	background-attachment: fixed;
+	width: 100%;
+	height: 1200px;
+	justify-content: space-around;
+	align-items: center;
+	flex-direction: column;
+	overflow: auto;
+}
+
+.cont{
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+	flex-direction: column;
+	overflow: auto;	
+}
+
+/* ************************************MY_POST********************************** */
+
+.mespost{
+	background-color: white;
 	width: 50%;
 	height: 30%;
 	text-align: center;
+	margin: 3%;
 	border-radius: 4px;
 	box-shadow: 0 10px 10px;
 }
+
+/* *******************************POST_PAR_CAT*********************************** */
+
++@font-face {
+	font-family: Edelsans;
+	src: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/edelsans_regular-webfont.woff);
+  }
+  body { 
+	margin: 0;
+
+  }
+  section { 
+	height: auto;
+	box-sizing: border-box;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	text-align: center; 
+	flex-direction: column;
+	padding: 2vw;
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	font-size: 1.1em; 
+  }
+  section:first-of-type { 
+	font-size: 1.1em;
+  }
+  section:first-of-type, section.pop { 
+	color: #fff;
+	text-shadow: 0 0 5px rgba(0,0,0,0.4); 
+  }
+  section:first-of-type, section.pop  { 
+	background: #fff;
+  }
+
+.lien-post-cat{
+	display: flex;
+	flex-direction: column;
+}
+
 /* ************************************FOOTER************************************ */
 
 footer{
@@ -438,4 +891,3 @@ footer ul{
 footer li{
 	list-style-type: none;
 }
-
