--- a/CSS/style_clair.css
+++ b/CSS/style_clair.css
@@ -23,7 +23,9 @@ li{
 } 
 
 /* ************************************HEADER************************************ */
-
+.allpost{
+	border:1px dotted black;
+}
 header{
 	height: 10%;
 	width: 100%;
